fix word wrap

--- a/client/src/components/HeaderRight.css
+++ b/client/src/components/HeaderRight.css
@@ -99,7 +99,7 @@
 	
 	#header div.search,
 	#header .search .icon.input {
-		min-width: 7.5rem;
+		min-width: 6.5rem;
 		width: 95%;
 	}
 
